IaC/deployment-ingress/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adopter-service
  namespace: microservices
spec:
  selector:
    matchLabels:
      app: adopter-service
  template:
    metadata:
      labels:
        app: adopter-service
    spec:
      containers:
        - name: adopter-service
          image: 304708116812.dkr.ecr.us-east-1.amazonaws.com/adopter-ecr:latest
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 512Mi
              cpu: 1000m
