IaC/deployment-ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adopter-service
  namespace: microservices
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: adopter-service
